[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "becalib"
version = "0.0.1"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

requires-python = ">=3.12"

authors = [
  { name="Simone ARAGNO", email="aragno.simone@gmail.com" },
]
maintainers = [
  {name="Simone ARAGNO", email="aragno.simone@gmail.com" }
]

description = "Building Envelop Components Analysis Library"
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["Building", 
            "Building physics",
            "Envelope", 
            "time shift", 
            "Envelop",
            "13786"]


classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Repository = "https://github.com/SimoneAragno/becalib"
Changelog = "https://github.com/SimoneAragno/becalib/blob/main/CHANGELOG.md"