[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "becalib"
version = "0.0.1"

requires-python = ">=3.10"

authors = [
  { name="Simone ARAGNO", email="aragno.simone@gmail.com" },
]
maintainers = [
  {name="Simone ARAGNO", email="aragno.simone@gmail.com" }
]
description= "Building Envelope Components Analysis Library "

readme = "README.md"

license = {file = "LICENSE"}

keywords = ["Building", 
            "Building physics",
            "Envelope", 
            "Time shift",
            "Decrement factor", 
            "Areal heat capacity",
            "Summer performance", 
            "Wall", 
            "Facade",
            "ISO 13786"]


classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}



[project.urls]
Repository = "https://github.com/SimoneAragno/becalib"
Changelog = "https://github.com/SimoneAragno/becalib/blob/main/CHANGELOG.md"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"locales" = ["*.mo","*.po"]}